--- a/styles/style.css
+++ b/styles/style.css
@@ -3,7 +3,7 @@
   min-width: 1100px;
   max-width: 1600px;
   margin: auto;
-  font-family: Arial, "Helvetica Neue", sans-serif;
+  font-family: Helvetica Neue, "Arial", sans-serif;
   font-size: 16px;
   line-height: 20px;
 }
@@ -58,6 +58,7 @@
   font-size: 20px;
   line-height: 30px;
   max-width: 532px;
+  margin: 0;
 }
 
 .header__image {
@@ -317,8 +318,7 @@
 }
 
 .step {
-  flex-basis: initial;
-  width: 220px;
+  flex-basis: 220px;
 }
 
 .step__title {
